Fix styling for event des, temporarily remove nav links, align nav to right

--- a/src/Components/Event-Des.css
+++ b/src/Components/Event-Des.css
@@ -36,4 +36,6 @@
 
 .des-div{
     margin-bottom: 2rem;
+    text-align: left;
+    width: 75vw;
 }
